Fixed overlapping of header and navbar bug

--- a/League.css
+++ b/League.css
@@ -29,6 +29,8 @@ nav {
   margin: 0;
   margin-top: 30px;
   padding: 5px;
+  position: relative;
+  top: 20px;
   padding-left: 15px;
   width: 99%;
 }
